# Embedded-Intelligence-Package

./: CMakeLists.txt  LICENSE.md  README.md
docs/: EIP_STANDARD_OVERVIEW.md  ENGINEER_QUICKSTART.md  INTEGRATION_GUIDE.md  MODEL_DATASHEET.md
eip/: model.eil.json
examples/: full_smart_pong_example.cpp
include/: smart_pong_ai.h
src/: smart_pong_ai.cpp  smart_pong_model_backend.cpp  smart_pong_persistence.cpp
